w miarę gotowy component home

--- a/src/main/resources/static/pages/home.html
+++ b/src/main/resources/static/pages/home.html
@@ -1,9 +1,9 @@
 
-<div class="container">
-    <div class="workers">
-
+<div class="container-home" flex="100" layout="row">
+    <div class="btn-home workers-home" flex="50">
+        <h1>Szukam <br/> pracy</h1>
     </div>
-    <div class="employers">
-
+    <div class="btn-home employers-home" flex="50">
+        <h1>Zlecam <br/> pracę</h1>
     </div>
 </div>
