--- a/src/main/resources/static/pages/first-filter.html
+++ b/src/main/resources/static/pages/first-filter.html
@@ -1,1 +1,6 @@
-<div>search works!</div>
+<div class="container-choose-city">
+    <img src="../img/miasto.png" alt="obrazek miasta">
+    <label for="city">wybierz miasto lub region</label>
+    <input type="text" id="city" ng-model="value">
+    <a href="#/search/:value"><md-button class="btn-search">szukaj pracy</md-button></a>
+</div>
