--- a/src/main/resources/static/pages/home.html
+++ b/src/main/resources/static/pages/home.html
@@ -1,9 +1,21 @@
+<!--<div class="container-home" flex="100" layout="row">-->
+    <!--<div class="btn-home workers-home" flex="50">-->
+        <!--<a href="#/search-job" style="width:100%;height:100%">Szukam pracy</a>-->
+    <!--</div>-->
+    <!--<div class="btn-home employers-home" flex="50">-->
+        <!--<a href="" style="width:100%;height:100%">Zlecam pracę</a>"-->
+    <!--</div>-->
+<!--</div>-->
 
-<div class="container-home" flex="100" layout="row">
-    <div class="btn-home workers-home" flex="50">
-        <h1>Szukam <br/> pracy</h1>
+<div flex="100" data-layout="row" data-layout-align="center stretch">
+    <a href="#/search-job" style="width:100%;height:100%">
+    <div flex="50" class="button lookingForJob">
+       Szukam pracy
+    </div></a>
+    <a href="" style="width:100%;height:100%">
+    <div flex="50" class="button lookingForEmployee">
+        Zlecam pracę
     </div>
-    <div class="btn-home employers-home" flex="50">
-        <h1>Zlecam <br/> pracę</h1>
-    </div>
+    </a>
+
 </div>
