--- a/src/main/resources/static/pages/search.html
+++ b/src/main/resources/static/pages/search.html
@@ -1,12 +1,52 @@
 <div class="container-search">
     <div class="left-toolbar-search">
         <h2>Filtry</h2>
+
+        <div class="form-section">
+            <label for="city">Miasto: </label>
+            <input type="text" name="city" id="city" ng-model="filters.city"><br/>
+        </div>
+        <div class="form-section">
+            <label for="region">Region: </label>
+            <input type="text" name="region" id="region" ng-model="filters.region"><br/>
+        </div>
+        <div class="form-section">
         <label for="jobType">Typ pracy</label> 
-        <select name="jobType" id="jobType">
+        <select name="jobType" id="jobType" ng-model="filters.jobType">
             <option value="Biurowa">Biurowa</option>
             <option value="Praca zdalna">Praca zdalna</option>
             <option value="Praca o charakterze mieszanym ">Praca o charakterze mieszanym </option>
+            <option value=""></option>
+        </select><br/>
+        </div>
+        <div class="form-section">
+        <label for="contractType">Typ umowy</label> 
+        <select name="contractType" id="contractType" ng-model="filters.contractType">
+            <option value="Umowa o pracę">Umowa o pracę</option>
+            <option value=""></option>
+        </select><br/>
+        </div>  
+        <div class="form-section">
+        <label for="timeType">Typ umowy</label> 
+        <select name="timeType" id="timeType" ng-model="filters.timeType">
+            <option value=""></option>
+            <option value="Pełen etat">Pełen etat</option>
+        </select><br/>
+        </div>
+        <div class="form-section">
+        <label for="skills">Umiejętności</label> 
+        <select name="skills" id="skills" ng-model="filters.skills">
+            <option value=""></option>
+            <option value="Zmywanie">Zmywanie</option>
+        </select><br/>
+        </div>
+        <div class="form-section">
+        <label for="field">Branża</label> 
+        <select name="field" id="field" ng-model="filters.field">
+            <option value=""></option>
+            <option value="IT">IT</option>
         </select>
+        </div>
     </div>
     <div class="offers-search">
         <div class="offer-search" ng-repeat="offer in offers track by $index">
