--- a/src/main/resources/static/pages/home.html
+++ b/src/main/resources/static/pages/home.html
@@ -7,15 +7,24 @@
     <!--</div>-->
 <!--</div>-->
 
-<div flex="100" data-layout="row" data-layout-align="center stretch">
-    <a href="#/search-job" style="width:100%;height:100%">
-    <div flex="50" class="button lookingForJob">
-       Szukam pracy
-    </div></a>
-    <a href="" style="width:100%;height:100%">
-    <div flex="50" class="button lookingForEmployee">
-        Zlecam pracę
-    </div>
-    </a>
+<!--<div flex="100" data-layout="row" data-layout-align="center stretch">-->
+    <!--<a href="#/search-job" style="width:100%;height:100%">-->
+    <!--<div flex="50" class="button lookingForJob">-->
+       <!--Szukam pracy-->
+    <!--</div></a>-->
+    <!--<a href="" style="width:100%;height:100%">-->
+    <!--<div flex="50" class="button lookingForEmployee">-->
+        <!--Zlecam pracę-->
+    <!--</div>-->
+    <!--</a>-->
 
+<!--</div>-->
+
+<div data-layout="row">
+    <div class="jobsearch" flex="50">
+        <a href="#/search-job">SZUKAM PRACY</a>
+    </div>
+    <div class="divjob" flex="50">
+        <a href="#/">ZLECAM PRACĘ</a>
+    </div>
 </div>
