--- a/src/main/resources/static/pages/home.html
+++ b/src/main/resources/static/pages/home.html
@@ -2,7 +2,7 @@
 <div data-layout="row">
 
     <div class="jobsearch" flex="50">
-        <a href="#/search-job">SZUKAM PRACYy</a>
+        <a href="#/search">SZUKAM PRACY</a>
     </div>
     <div class="givejob" flex="50">
         <a href="/">ZLECAM PRACE</a>
