--- a/src/main/resources/static/pages/search.html
+++ b/src/main/resources/static/pages/search.html
@@ -4,7 +4,7 @@
         <md-whiteframe style="background-color: white; margin-top:18px; width: 80%;" class="md-whiteframe-10dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" data-layout="column" data-layout-align="center center">
 
             <h2 style="margin-bottom: 10px">filtrowanie wyników</h2>
-            <div data-layout="row">
+            <div data-layout="row" layout-wrap="" >
             <!--<md-input-container style="margin-right: 10px;">-->
                 <!--<label>branża</label>-->
                 <!--<md-select ng-model="selectedFilters.field">-->
@@ -35,26 +35,36 @@
                     <!--<md-option ng-repeat="timeType in filters.timeType" value="{{timeType}}">{{timeType}}</md-option>-->
                 <!--</md-select>-->
             <!--</md-input-container>-->
+                <div id="mainselection">
                 <label for="field">branża</label>
                 <select name="field" id="field" ng-model="selectedFilters.field">
                     <option ng-repeat="field in filters.field" value="{{field}}">{{field}}</option>
                 </select>
+                </div>
+                <div id="mainselection">
                 <label for="contractType">rodzaj umowy</label>
                 <select name="contractType" id="contractType" ng-model="selectedFilters.contractType">
-                    <option ng-repeat="contractType in filters.contractType" value="{{contractType}}">{{field}}</option>
+                    <option ng-repeat="contractType in filters.contractType" value="{{contractType}}">{{contractType}}</option>
                 </select>
+                </div>
+                <div id="mainselection">
                 <label for="skills">Umiejętności</label>
                 <select name="skills" id="skills" ng-model="selectedFilters.skills">
                     <option ng-repeat="skills in filters.skills" value="{{skills}}">{{skills}}</option>
                 </select>
+                </div>
+                <div id="mainselection">
                 <label for="jobType">charakter pracy</label>
                 <select name="jobType" id="jobType" ng-model="selectedFilters.jobType">
                     <option ng-repeat="jobType in filters.jobType" value="{{jobType}}">{{jobType}}</option>
                 </select>
+                </div>
+                <div id="mainselection">
                 <label for="timeType">Wymiar czasu pracy</label>
                 <select name="timeType" id="timeType" ng-model="selectedFilters.timeType">
                     <option ng-repeat="timeType in filters.timeType" value="{{timeType}}">{{timeType}}</option>
                 </select>
+                </div>
 
 
             </div>
