--- a/src/main/resources/static/pages/first-filter.html
+++ b/src/main/resources/static/pages/first-filter.html
@@ -3,5 +3,5 @@
     <label for="city">wybierz miasto lub region</label>
     <input type="text" id="city" ng-model="value">
     <!--<a href="#/search/{{value}}"><md-button class="btn-search">SZUKAJ PRACY</md-button></a>-->
-    <md-button class="btn-search" onClick="window.location.replace('#/search/'+$('#city').val())">SZUKAJ PRACY</md-button>
+    <md-button class="btn-search" onClick="window.location.replace('#/search/'+$('#SZUKAJ PRACY</md-button>
 </div>
