--- a/src/main/resources/static/pages/search.html
+++ b/src/main/resources/static/pages/search.html
@@ -35,31 +35,31 @@
                     <!--<md-option ng-repeat="timeType in filters.timeType" value="{{timeType}}">{{timeType}}</md-option>-->
                 <!--</md-select>-->
             <!--</md-input-container>-->
-                <div id="mainselection">
+                <div id="styled-select slate">
                 <label for="field">branża</label>
                 <select name="field" id="field" ng-model="selectedFilters.field">
                     <option ng-repeat="field in filters.field" value="{{field}}">{{field}}</option>
                 </select>
                 </div>
-                <div id="mainselection">
+                <div id="styled-select slaten">
                 <label for="contractType">rodzaj umowy</label>
                 <select name="contractType" id="contractType" ng-model="selectedFilters.contractType">
                     <option ng-repeat="contractType in filters.contractType" value="{{contractType}}">{{contractType}}</option>
                 </select>
                 </div>
-                <div id="mainselection">
+                <div id="styled-select slate">
                 <label for="skills">Umiejętności</label>
                 <select name="skills" id="skills" ng-model="selectedFilters.skills">
                     <option ng-repeat="skills in filters.skills" value="{{skills}}">{{skills}}</option>
                 </select>
                 </div>
-                <div id="mainselection">
+                <div id="styled-select slate">
                 <label for="jobType">charakter pracy</label>
                 <select name="jobType" id="jobType" ng-model="selectedFilters.jobType">
                     <option ng-repeat="jobType in filters.jobType" value="{{jobType}}">{{jobType}}</option>
                 </select>
                 </div>
-                <div id="mainselection">
+                <div id="styled-select slate">
                 <label for="timeType">Wymiar czasu pracy</label>
                 <select name="timeType" id="timeType" ng-model="selectedFilters.timeType">
                     <option ng-repeat="timeType in filters.timeType" value="{{timeType}}">{{timeType}}</option>
